jb photo on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,10 @@ h5 {
 }
 .jbimage {
     margin: 18px auto;
-    /*height: 120px;
-    width: 120px;*/
-    position: relative;
+    position: static;
     max-width: 18%;
     height: auto;
+    background-size: contain;
 
 }
 
